# uref-sharing-example

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain
tests/: Cargo.toml
tests/src/: integrated.rs  integration_tests.rs  standalone.rs
uref_share/: Cargo.toml
uref_share/src/: locked.rs  locked_with_share.rs  share.rs
