[package]
name = "uref_share"
version = "0.1.0"
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="1.2.0" }
types = { package = "casper-types", version="1.2.0" }

[[bin]]
name = "uref-share"
path = "src/share.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "locked"
path = "src/locked.rs"
bench = false
doctest = false
test = false


[features]
default = ["contract/std", "types/std"]
